samples/_failures_safe/1761082052_d33b26_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4cd60a4a.c: In function ‘analyze_logs’:
./samples/SAFE/__tmp_4cd60a4a.c:139:44: error: missing terminating " character
  139 |         strcpy(stats->most_frequent_level, "
      |                                            ^
./samples/SAFE/__tmp_4cd60a4a.c:139:9: error: expected expression at end of input
  139 |         strcpy(stats->most_frequent_level, "
      |         ^~~~~~
./samples/SAFE/__tmp_4cd60a4a.c:139:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4cd60a4a.c:139:9: error: expected declaration or statement at end of input
